--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <nav> <a href="#ac"> Создатели </a> </nav>
         <nav> <a href="#ad"> Казутака Кодака </a></nav>
         <nav> <a href="#af"> Даты выхода частей </a> </nav>
-        <nav> <a href="sd"> Галерея </a></nav>
+        <nav> <a href="#sd"> Галерея </a></nav>
+        <nav> <a href="#index/html> Главная страница </a></nav>
+        <nav> <a href="#index2.html> Вторая страница </a></nav>
         <main>
         <h1 id="ab">Информация</h1>
         <p><b><i>Danganronpa</i></b> - японская серия визуальных новелл, написанная Казутакой Кодакой и с дизайнами персонажей от Руи Комацузаки, издаваемая Spike Chunsoft с 2010 года. Серия издается с английской локализацией от NIS America. На данный момент в франшизе присутствуют четыре игры и два аниме-сериала, с последующей мангой, новеллами, постановками и спин-оффами. Последняя игра серии, Danganronpa V3: Killing Harmony, вышла в Японии 12 января 2017 и в мире 26 сентября 2017. </p>
