--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,8 @@
         <nav> <a href="#dd">3 место </a></nav>
         <nav> <a href="#aa">2 место</a></nav>
         <nav> <a href="#cc">1 место </a></nav>
-        <nav> <a href="#index.html"> Главная страница </a></nav>
-        <nav> <a href="#index2.html"> Вторая страница </a> </nav> 
+        <nav> <a href="index.html"> Главная страница </a></nav>
+        <nav> <a href="index2.html"> Вторая страница </a> </nav> 
         <main> 
             <h2> 10 место </h2>
             <h2> Цумуги Широгане</h2>
