--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav> <a href="#ad"> Казутака Кодака </a></nav>
         <nav> <a href="#af"> Даты выхода частей </a> </nav>
         <nav> <a href="#sd"> Галерея </a></nav>
-        <nav> <a href="index.html> Главная страница </a></nav>
+        <nav> <a href="https://samira-ai.github.io/danganronpa/#sd"> Главная страница </a></nav>
         <nav> <a href="index2.html> Вторая страница </a></nav>
         <main>
         <h1 id="ab">Информация</h1>
