--- a/index2.html
+++ b/index2.html
@@ -7,11 +7,11 @@
         <header> 
             <h1> Самые популярные персонажи Danganronpa </h1>
         </header>
-        <nav> <a href="#dd">3 место </a></nav>
-        <nav> <a href="#aa">2 место</a></nav>
-        <nav> <a href="#cc">1 место </a></nav>
-        <nav> <a href="index.html"> Главная страница </a></nav>
-        <nav> <a href="index2.html"> Вторая страница </a> </nav> 
+        <nav> <a href="#dd">3 место </a>
+           <a href="#aa">2 место</a>
+           <a href="#cc">1 место </a>
+           <a href="index.html"> Главная страница </a>
+           <a href="index2.html"> Вторая страница </a> </nav> 
         <main> 
             <h2> 10 место </h2>
             <h2> Цумуги Широгане</h2>
