--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <a href="#ac"> Создатели </a> 
          <a href="#ad"> Казутака Кодака </a>
          <a href="#af"> Даты выхода частей </a> 
-         <a href="#sd"> Галерея </a></nav>
+         <a href="#sd"> Галерея </a>
          <a href="https://samira-ai.github.io/danganronpa/#sd"> Главная страница </a>
          <a href="index2.html> Вторая страница </a></nav>
         <main>
