--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     <title> Danganronpa </title>
     <link rel="stylesheet" href="style.css"/>
+    <meta name="google-site-verification" content="S-a-yDsXADcVSspRusW-Sb8Dds5h6ekcyVyXMnbo9FM" />
     </head>
     <body>
         <header>
